test/must_fail/jfet_level_2_param.ngjs
#!/usr/bin/env ngspicejs
// mixing jfet model level params
// linter: ngspicejs-lint
"use strict";

battery('U1', 1, 0, 9);
battery('U2', 2, 0, 1);
//jfet_model('MYJFET');
jfet_model("MY_JFET").kind("JFET_N").beta(0.0007).vto(-0.9).is(1.7e-15).rd(10).rs(12).mvst(0.1);
jfet_n('T1', 1, 2, 3, 'MY_JFET');
resistor('R1', 3, 0, 100);
tran().run().chart('I(U1)');

